# LarkServiceCursor

./: .buildinfo  .dockerignore  .env.apaas.example  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURRENT-STATUS.md  DOCS-CLEANUP-PLAN.md  DOCS-CLEANUP-STRATEGY.md  DOCS_STRUCTURE.html  DOC_TESTING_GUIDE.html  DOC_VALIDATION_PLAN.html  Dockerfile  FINAL_TEST_GUIDE.md  INTEGRATION_TEST_QUICKSTART.md  Makefile  PHASE1-COMPLETE-REPORT.md  PHASE2-4-COMPLETE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION_003.md  PR_DESCRIPTION_v0.5.0.md  QUICK-START-NEXT-CHAT.md  QUICK_START_TEST.md  README.html  README.md  SIMPLE_TEST.md  TESTING-GUIDE.html  TESTING_GUIDE.md  VERIFICATION_REPORT.md  VERSION.txt  WEBSOCKET-AUTH-DISCOVERY-SUMMARY.md  alembic.ini  api-examples.html  api-rate-limiting-guide.html  architecture.html  ci-cd-automation-plan.md  coverage.json  coverage.xml  (+28 more)
.cursor/commands/: speckit.implement.md
.cursor/rules/: specify-rules.mdc
.doctrees/: DOCS_STRUCTURE.doctree  DOC_TESTING_GUIDE.doctree  DOC_VALIDATION_PLAN.doctree  README.doctree  TESTING-GUIDE.doctree  api-examples.doctree  api-rate-limiting-guide.doctree  architecture.doctree  deployment.doctree  development-environment.doctree  error-codes.doctree  error-handling-guide.doctree  error-recovery-guide.doctree  grafana-setup-guide.doctree  index.doctree  installation.doctree  integration-test-guide.doctree  monitoring.doctree  observability-guide.doctree  quick-reference.doctree  quickstart.doctree  security-guide.doctree  tracing-guide.doctree  troubleshooting-guide.doctree  troubleshooting.doctree
.doctrees/api/: apaas.doctree  auth.doctree  clouddoc.doctree  contact.doctree  core.doctree  events.doctree  lark_service.cardkit.doctree  messaging.doctree  monitoring.doctree  scheduler.doctree  server.doctree  services.doctree  utils.doctree
.doctrees/architecture/: token-refresh-mechanism.doctree
.doctrees/archive/: ARCHIVE_INDEX.doctree  README.doctree  api_reference.doctree
.doctrees/deployment/: PRODUCTION_DEPLOYMENT.doctree
.doctrees/features/: scheduled-tasks.doctree  token-monitoring.doctree
.doctrees/releases/: v0.5.0.doctree
.doctrees/testing/: INTEGRATION_VERIFICATION.doctree
.doctrees/usage/: advanced.doctree  apaas.doctree  app-management.doctree  auth.doctree  card.doctree  clouddoc.doctree  contact.doctree  messaging.doctree  scheduler.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_modules/: index.html
_sources/: DOCS_STRUCTURE.md.txt  DOC_TESTING_GUIDE.md.txt  DOC_VALIDATION_PLAN.md.txt  api-examples.md.txt  deployment.md.txt  index.rst.txt  installation.md.txt  quickstart.md.txt  troubleshooting.md.txt
api/: apaas.html  auth.html  clouddoc.html  contact.html  core.html  events.html  lark_service.cardkit.html  messaging.html  monitoring.html  scheduler.html  server.html  services.html  utils.html
architecture/: token-refresh-mechanism.html
archive/: ARCHIVE_INDEX.html  CLEANUP-2026-01-18.md  DOCS-CLEANUP-COMPLETE.md  README.html  README.md  api_reference.html
config/: prometheus-alerts.yaml  prometheus.yml  staging.env.template
deployment/: PRODUCTION_DEPLOYMENT.html
docs/: DOC_TESTING_GUIDE.md  FINAL-COVERAGE-REPORT.md  Makefile  README.md  TEST-COVERAGE-IMPROVEMENT-PLAN.md  TESTING-GUIDE.md  apaas-test-guide.md  api-examples.md  api-rate-limiting-guide.md  api-reference-phase4.md  api_reference.md  architecture.md  callback-server-deployment.md  ci-cd.md  ci-security-scanning.md  clouddoc-complete-api-guide.md  clouddoc-crud-completion-report.md  clouddoc-permissions-guide.md  conf.py  database-timezone-config.md  deployment.md  dev-workflow.md  development-environment.md  docker-optimization-guide.md  docstring-standard.md  env.test.example  error-codes.md  error-handling-guide.md  error-recovery-guide.md  git-commit-standards.md  git-workflow.md  github-actions-test-failures-report.md  grafana-setup-guide.md  index.rst  integration-test-complete-report-2026-01-18.md  integration-test-guide.md  integration-test-setup-guide.md  integration-test-setup.md  json-logging-guide.md  monitoring.md  (+26 more)
features/: scheduled-tasks.html  token-monitoring.html
migrations/: env.py  init.sql
releases/: v0.5.0.html
scripts/: backup_database.sh  build_docs.sh  check-all.sh  fix-vulnerabilities-with-uv.sh  fix_card_builder_docs.py  fix_messaging_client_docs.py  fix_postgres_url_method.py  fix_token_storage_docs.py  generate_mock_metrics.py  generate_simple_metrics.py  git-add-check.sh  git-commit-sync.sh  health_check.py  production-checks.sh  restore_database.sh  setup-git-add-check.sh  setup-pre-commit.sh  setup_integration_test.py  staging_health_check.py  start_metrics_server.sh  test_migration_rollback.sh  validate_docs.py  validate_docs_syntax.py  validate_env.py  verify_integration_config.py
specs/: pending-tasks-checklist.md
staging-simulation/: .gitignore  README.md  docker-compose.yml  env.local.template  grafana-dashboard.json  grafana-datasource.yml  init-db.sh  prometheus.yml  prometheus.yml.template  start.sh  update_test_tokens.sh  verify_test_config.sh
testing/: INTEGRATION_VERIFICATION.html
tests/: __init__.py  conftest.py  test_phase1_setup.py
usage/: advanced.html  apaas.html  app-management.html  auth.html  card.html  clouddoc.html  contact.html  messaging.html  scheduler.html
(+462 files in other folders)
